# butler

./: .eslintrc.js  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  commitlint.config.js  jest.config.js  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
src/: index.ts
tests/: index.test.ts
