[tool.poetry]
name = "butler"
version = "0.1.0"
description = "Housekeeps everything in a repository."
authors = ["Charlton Lim <cadmusthefounder@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.8.10"

[tool.poetry.dev-dependencies]
pre-commit = "~2.15.0"
commitizen = "~2.18.0"

[tool.commitizen]
name = "cz_customize"

[tool.commitizen.customize]
message_template = "{{type}}({{scope}}): {{subject}}"
schema = "type(scope): subject"
example = "feat(api): implement health endpoint"

[[tool.commitizen.customize.questions]]
type = "list"
name = "type"
message = "Select the type of change you are committing:"
choices = [
  {value = "build", name = """build: Changes that affect the build system or external \
                              dependencies (example scopes: poetry, docker)"""},
  {value = "ci", name = """ci: Changes to our CI configuration files and scripts \
                          (example scopes: CodeFresh, GitHub Actions)"""},
  {value = "docs", name = "docs: Documentation only changes."},
  {value = "feat", name = "feat: A new feature."},
  {value = "fix", name = "fix: A bug fix."},
  {value = "perf", name = "perf: A code change that improves performance."},
  {value = "refactor", name = """refactor: A code change that neither fixes a bug nor \
                                adds a feature."""},
  {value = "test", name = "test: Adding missing tests or correcting existing tests."},
  {value = "revert", name = "revert: Reverts a previous commit."}
]

[[tool.commitizen.customize.questions]]
type = "list"
name = "scope"
message = "Select the scope:"
choices = [
  {value = "*", name = "*: No specific scope."},
  {value = "commit", name = "commit: Commit hooks."},
]

[[tool.commitizen.customize.questions]]
type = "input"
name = "subject"
message = """\
    State the subject, a concise description of the changes. Imperative, \
    lower case and no final dot: \
    """
